# routes/users.js
@@ -7,7 +7,7 @@ router.get('/', usersController.getAll);
 router.get('/:username', usersController.getSingle);
 
 router.post('/', usersController.insertUser);
-// router.put('/:username', usersController.updateContact);
+router.put('/:username', usersController.updateContact);
 router.delete('/:username', usersController.deleteContact);
 
 module.exports = router;
